
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "milvus-vector-search-operations"
version = "0.1.0"
description = "Turn vector search infrastructure into an operations product with index health, search diagnostics, and retrieval service management."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
